Fix Sourcery review issues: test.sh, GPU compose, K8s security
- test.sh: Skip config validation for health checks on running services
- docker-compose.gpu.yml: Use device_requests instead of deploy.resources for non-Swarm GPU access
- k8s/base/ollama-statefulset.yaml: Remove runAsUser enforcement to allow Ollama image to run as root

--- a/infra/lan-runner/docker-compose.gpu.yml
+++ b/infra/lan-runner/docker-compose.gpu.yml
@@ -9,10 +9,8 @@ services:
       - OLLAMA_GPU=${OLLAMA_GPU:-all}
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    device_requests:
+      - driver: nvidia
+        count: all
+        capabilities:
+          - gpu
