--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
         file_or_dir: infra/lan-runner/
         config_file: .yamllint.yml
     - name: Lint Kubernetes manifests
-      uses: instrumenta/kubeval-action@master
-      with:
-        files: infra/lan-runner/k8s/
+      uses: bmuschko/setup-kubeconform@v1
+    - name: Validate Kubernetes manifests
+      run: kubeconform -summary -verbose infra/lan-runner/k8s/
 
   test:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
         cp .env.example .env
         echo "RUNNER_TOKEN=dummy_token_for_ci" >> .env
         echo "REPO_URL=https://github.com/tzervas/lan-runner" >> .env
-        ./test.sh || echo "Test script ran with expected warnings (services not running)"
+        ./test.sh
     - name: Test Docker Compose config
       run: |
         cd infra/lan-runner
